# FairSpeechLoRaAndGRPO

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  ideas and draft.md  project-overview.html  project-state-1.html  pyproject.toml
.pkm/: pkm-index.db
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: asha-rslora-explainer.html  asr-evaluation-metrics.html  caveman-eval-report.html  gpu-occupancy-handling.html  head-surgery-progress.html  head-surgery-results.html  head_surgery_report.md  head_surgery_report_edited.md  lightning-cli-demo.html  maximize-vram-playbook.html  phase4.1-rl-comparison-research.html  phase6-sample-collecting.html  plora-explainer.html  pre-decoding-methods.html  project-overview.html  project-state.html  sft-rl-alternating-training.html  table-styles-showcase.html  vram-management-plora.html  webdataset-explained.html
experiments/: asr-fairness-share-dataset-map.md  common-voice-24-clips-zip-inspection.md  cv-source-sample-rate-structure-2026-04-27.md  fairspeech-compression-infra-smoke-2026-04-27.md  fairspeech-local-structure-2026-04-27.md  lora-prototype-ultraplan.md  phase21-stage2-plora-asha-sweep.md  phase21-stage3-plora-asha-rslora-sweep.md  plora-stage1-packed-sweep.md  project-stale-file-audit-2026-04-27.md
fileClasses/: Experiment.md  Issue.md  Knowledge.md  Log.md  Reference.md  Task.md
graphify-out/: .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
issues/: codex-pretooluse-hook-failure.md  pytest-unavailable-local-environment.md
knowledge/: head-surgery-report-structure.md  lora-hyperparameter-sensitivity.md  maximizing-vram-usage-ml.md  ml-prototyping-before-scaling.md  sft-rl-alternating-training.md
logs/: agents-md-refresh.md  asr-fairness-dataset-creation.md  codex-pretooluse-hook-cleanup.md  common-voice-clips-localization.md  data-loader-dataset-collate.md  data-loader-sampler-factory.md  demographic-stratified-sampler-creation.md  fairspeech-b2-download.md  fairspeech-compression-infrastructure-2026-04-27.md  fairspeech-duration-budget-vm-prep.md  fairspeech-full-eval-supervisor.md  graphify-active-code-map.md  graphify-codex-install.md  graphify-duplicate-cleanup.md  head-surgery-diagnosis-complete.md  head-surgery-progress-design-system-upgrade.md  head-surgery-stage-f-energy-vad.md  lora-prototype-training-script.md  lora-prototype-validation-script.md  phase1-pipeline-sanity-pass.md  phase2-standard-lora-baseline.md  phase2-validation-gap-bridging.md  phase3-full-sft-lora-infrastructure.md  phase3-full-sft-lora-launch.md  phase3-vram-preflight-cellC-nw2.md  phase3-vram-tune-grid.md  phase3-vram-tune-infrastructure.md  phase4-grpo-infrastructure.md  prepare-splits-creation.md  project-cleanup-agent-docs.md  project-cleanup-duplicates.md  project-cleanup-gitignore.md  project-cleanup-graphify-refresh.md  project-cleanup-head-surgery-archive.md  project-state-data-inventory.md  scripts-reorganization.md  validate-splits-creation.md  vm-setup-fairspeech-compression-vm.md
reports/: fairspeech-compression-final-results.md  fairspeech-full-eval-reproducibility.md
scripts/: compute_fairness_metrics.py  compute_fairness_metrics_fs.py  compute_perturbation_metrics.py  error_decomposition.py  error_decomposition_fs.py  generate_all_plots.py  generate_perturbation_plots.py  generate_perturbations.py  launch_priority_batch.sh  prepare_dataset.py  prepare_fairspeech.py  prepare_librispeech.py  prepare_overleaf.py  prepare_splits.py  regenerate_figures_large_fonts.py  run_inference.py  (+7 more)
(+230 files in other folders)
